# dask

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  example.sqlite  main.py  models.py  pyproject.toml  requirements.txt  run.py  settings.toml.example
app/: __init__.py
app/auth/: __init__.py  models.py  routes.py  validators.py
app/auth/static/: js.js  style.css
app/auth/templates/auth/: base.html  login.html  register.html
app/mod_auth/: controllers.py  models.py
app/tasks/: __init__.py  models.py  routes.py
app/tasks/static/: js.js
app/tasks/templates/tasks/: base.html  index.html
config/: design.md  design.yaml  requirements.txt
test/: conftest.py  dask.postman_collection.json  test_users_creation.py
test/test_auth/: auth_page.py  conftest.py  test_users_creation.py
test/test_tasks/: conftest.py  test_tasks_crud.py
