[tool.poetry]
name = "DASK"
version = "0.1.0"
description = "TODO app"
authors = ["xander_pronin <xanderpronin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
allure-pytest = "2.9.45"
allure-python-commons = "2.9.45"
attrs = "21.4.0"
bcrypt = "3.2.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.10"
click = "8.0.3"
Flask = "2.0.2"
Flask-Bcrypt = "0.7.1"
Flask-JWT-Extended = "4.3.1"
Flask-SQLAlchemy = "2.5.1"
greenlet = "1.1.2"
idna = "3.3"
iniconfig = "1.1.1"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
packaging = "21.3"
pluggy = "1.0.0"
py = "1.11.0"
pycparser = "2.21"
PyJWT = "2.3.0"
pyparsing = "3.0.7"
requests = "2.27.1"
six = "1.16.0"
SQLAlchemy = "1.4.31"
toml = "0.10.2"
urllib3 = "1.26.8"
Werkzeug = "2.0.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
